--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "uuid": "^9.0.0"
+    "express-async-errors": "^3.1.1",
+    "og": "^0.0.2",
+    "pg": "^8.8.0"
   },
   "devDependencies": {
     "eslint": "^8.25.0",
